[+] #305 Remplacement dirname(__FILE__) par __DIR__ dans l'admin et le thème par défaut (P3ter)
[+] #309 Remplacement de define() par const (bazooka07)
[+] #312 En présence d'une homepage statique, le lien "archive total" redirige vers le blog (je-evrard, bazooka07, P3ter)
[+] #312 Remplacement de la fonction str_replace() par strtr() pour les liens vers les pages archives (bazooka07, P3ter)
FIX #302 Renvoie vers index.php si un paramètre est inconnu dans l'URI  (bazooka07)
FIX #322 plxDate::getCalendar() ne retourne jamais L_SUNDAY (jerrywham, P3ter)
FIX #323 La fonction plxUtils::printSelect ne fonctione pas avec un "selected" de type numérique (Philippe-M)   

## PLUXML 5.7 (sortie : 11/12/2018) ##

[+] PluCSS 1.3
[+] Nouveau thème par défaut
[+] Prise en compte du fichier CSS des plugins sur la page auth.php
[+] Administration : Tri ordre des catégories et des pages statiques par drag&drop
[+] Affichage de l'image d'accroche dans les flux RSS
[+] Gestionnaire de médias : affichage du nombre maximal de fichiers par envoi
[+] Amélioration des performances du gestionnaire de médias (contribution bazooka07)
[+] Thème par défaut : entête de page fixe (contribution bazooka07)
[+] Tri alphabétique inversé des articles et catégories  (contribution bazooka07)
[+] #225 Ajout id à la balise <body> de la page auth.php
[+] #230 Image d'accroche dans le premier article créé à l'installation
[+] #239 Test et affichage accès en écriture du dossier racine pour les thèmes
[+] #264 fonction debugJS (contribution bazooka07)
[+] #265 Affichage des archives sur une périodes glissantes de 12 mois (contribution bazooka07)
[+] #266 Tri des pages statiques, catégories et plugins par drag n drop (contribution bazooka07)
[+] #269 Ajout scope[admin|site] dans les fichiers infos.xml des plugins pour charger un plugin uniquement coté admin, site ou les 2 (contribution bazooka07)
[+] #305 Remplacement dirname(__FILE__) par __DIR__ dans l'admin et le thème par défaut (contribution bazzoka07)