@@ -78,7 +78,7 @@ $LANG = array(
 'L_NINTH'						=> 'neuvième',
 'L_TENTH'						=> 'dixième',
 'L_NTH'							=> 'ème',
-'L_CAPCHA_QUESTION'				=> 'Quelle est la <span class="capcha-letter">%s</span> lettre du mot <span class="capcha-word">%s</span> ?',
+'L_CAPCHA_QUESTION'				=> 'Quelle est la <span class="capcha-letter">%s</span> lettre du mot <span class="capcha-word">%s</span>&nbsp;?',
 
 # class.plx.utils.php
 'L_WRITE_ACCESS'				=> '%s est accessible en écriture',
